newProject4/force-app/main/default/objects/Car_Seller__c/Car_Seller__c.object-meta.xml
<CustomObject>
    <label>Car Seller</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Seller Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Sellers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>