newProject4/force-app/main/default/objects/Car_Seller__c/fields/Agent_Cost__c.field-meta.xml
<CustomField>
    <fullName>Agent_Cost__c</fullName>
    <label>Agent Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>